# nvim-config

./: .gitignore  .netrwhist  README.md  README.zh.md  coc-settings.json  general.vim  ginit.vim  gvimrc  init.vim  install.bat  install.sh  statusline.vim  tasks.ini
UltiSnips/: c.snippets  cmake.snippets  cpp.snippets  gitcommit.snippets  html.snippets  javascript.snippets  lua.snippets  rust.snippets  vim.snippets
after/ftplugin/: c.vim  common.vim  cpp.vim  fish.vim  gitcommit.vim  lua.vim  man.vim  markdown.vim  qf.vim  rust.vim  systemverilog.vim  vim.vim  vimwiki.vim
after/ftplugin/asm/: asm.vim
after/ftplugin/c/: c.vim
after/ftplugin/dot/: dot.vim
after/ftplugin/fish/: fish.vim
after/ftplugin/gitcommit/: gitcommit.vim
after/ftplugin/javascript/: javascript.vim
after/ftplugin/json/: jsonc.vim
after/ftplugin/lua/: lua.vim
after/ftplugin/make/: make.vim
after/ftplugin/man/: man.vim
after/ftplugin/markdown/: markdown.vim
after/ftplugin/qf/: qf.vim
autoload/: general.vim  qfpreview.vim  statusline.vim  tools.vim  utils.vim  welcome.vim
dict/: word.dict
doc/: README.md
keymap/: keymap.vim  unimparied.vim  window.vim
lua/: plugins.lua
plugin/: autocmd.vim  command.vim  keymap.vim  plugins_config.lua
scripts/: debian-install.sh  debian-instll.sh  ubuntu-install.sh
snippets/: _.snippets  c.snippets  lua.snippets  vim.json  vim.snippets
spell/: en.utf-8.add  en.utf-8.add.spl
tools/: .vimspector.json  dein.ps1  dein.sh  gitignore.vim  tools.vim
tools/Qt/QWidget/: CMakeLists.txt
tools/gitignore/: c_gitignore
(+7 files in other folders)
